--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <a href = cal.html>
             <h2 class="section-heading text-uppercase">Calendar</h2>
           </a>
-          <h3 class="section-subheading text-muted">Schedule of events for the Fall 2019 semester (Spring 2020 schedule coming up). Events are held in SERC 6th floor seminar room. Send us a message on slack when you arrive at SERC if you do not have access to this floor. </h3>
+          <h3 class="section-subheading text-muted">Schedule of events for the Spring 2020. We will have speakers once every 2-3 weeks (Schedule to be updated). Events are held in SERC 6th floor seminar room. Send us a message on slack when you arrive at SERC if you do not have access to this floor. </h3>
         </div>
       </div>
       <div class="row">
@@ -211,79 +211,79 @@
               <th>Time</th>
             </tr>
             <tr>
-              <td>8/28/19</td>
-              <td>Welcome Session! Pizza will be supplied! </td> 
-              <td>5-6PM</td>
+              <td>01/17/20</td>
+              <td>Welcome! The First Open Coding Session of the Year</td> 
+              <td>5-7PM</td>
             </tr>
             <tr>
-              <td>9/4/19</td>
-              <td> Github Tutorial </td>
-              <td>5-6PM</td>
+              <td>01/24/20</td>
+              <td>Open Coding Session</td> 
+              <td>5-7PM</td>
             </tr>
             <tr>
-              <td>9/13/19</td>
-              <td> Open Coding Session </td>
-              <td>5-6PM</td>
+              <td>01/31/20</td>
+              <td>Open Coding Session</td> 
+              <td>5-7PM</td>
             </tr>
             <tr>
-              <td>9/20/19</td>
+              <td>02/07/20</td>
               <td>Open Coding Session</td>
               <td>5-7PM</td>
             </tr>
             <tr>
-              <td>9/27/19</td>
-              <td>Open Coding Session </td>
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>10/4/19</td>
-              <td>Open Coding Session </td>
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>10/11/19</td>
-              <td>Sentieon on Precision Medicine Variant Calling</td>
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>10/18/19</td>
-              <td>Dr. William La Cava (Penn IBI)</td>
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>10/25/19</td>
-              <td>Dr. Grattepanche (TU) on Metatranscriptomics</td>
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>11/1/19</td>
-              <td>Dr. Jocelyn Behm (TU) on Species Declines in R</td>
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>11/8/19</td>
+              <td>02/14/20</td>
               <td>Open Coding Session</td>
               <td>5-7PM</td>
             </tr>
             <tr>
-              <td>11/15/19</td>
+              <td>02/21/20</td>
               <td>Open Coding Session</td>
               <td>5-7PM</td>
             </tr>
             <tr>
-              <td>11/22/19</td>
+              <td>02/28/20</td>
               <td>Open Coding Session</td>
               <td>5-7PM</td>
             </tr>
             <tr>
-              <td>11/29/19</td>
-              <td>No session!  Happy Thanksgiving!</td>
+              <td>03/06/20</td>
+              <td>Happy Spring Break!</td>
               <td></td>
             </tr>
             <tr>
-              <td>12/6/19</td>
-              <td>Last Session! Pizza will be supplied!</td>
-              <td>5-6PM</td>
+              <td>03/13/20</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>03/20/20</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>03/27/20</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>04/03/20</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>04/10/20</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>04/17/20</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>04/24/20</td>
+              <td>Last Open Coding Session of the Semester</td>
+              <td>5-7PM</td>
             </tr>
             </table>
         <!-- </div>   -->
