--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </tr>
             <tr>
               <td>01/17/20</td>
-              <td>Welcome! The First Open Coding Session of the Year</td> 
+              <td>Welcome! Open Coding Session</td> 
               <td>5-7PM</td>
             </tr>
             <tr>
