--- a/index.html
+++ b/index.html
@@ -327,7 +327,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Officers</h2>
-          <h3 class="section-subheading text-muted">We are looking for an Event Manager and a Community Service Chair. Let us know if you are interested.</h3>
+          <h3 class="section-subheading text-muted"></h3>
+          <h4 class="section-subheading text-muted">We are looking for an Event Manager and a Community Service Chair. Let us know if you are interested.</h4>
         </div>
       </div>
       <div class="row">
@@ -448,8 +449,8 @@
           </div>
         </div>
       </div>
-      <!-- <div class = "row">
-        <div class="col-sm-4">
+      <div class = "row">
+<!--         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/nm.JPG" alt="">
             <h4>Noreen McBrearty</h4>
