--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Officers</h2>
           <h3 class="section-subheading text-muted"></h3>
-          <h4 class="section-subheading text-muted">We are looking for an Event Manager and a Community Service Chair. Let us know if you are interested.</h4>
+          <p>We are looking for an Event Manager and a Community Service Chair. Let us know if you are interested.</p>
         </div>
       </div>
       <div class="row">
