inactive google drive link

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
               <td>Introduction to Libraries</td>
             </tr>
           </table>
-          <p>You can request access to our Google Drive tutorials by contacting studio admins.</p>
+          <p>You can request access to our tutorials by contacting studio admins.</p>
         <!-- </div> -->
       </div>
     </div>
