--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
               <td>Introduction to Libraries</td>
             </tr>
           </table>
-          <p>You can request access to our tutorials by contacting studio admins.</p>
+          <a class="btn btn-primary btn-md text-uppercase" href="https://forms.gle/bzmpZKxQXdXSgtsQ9">Click here to request access for the tutorials</a>
         <!-- </div> -->
       </div>
     </div>
