--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             </tr>
           </table>
           <p>You can request access to our tutorials by contacting studio admins.</p>
-          <a class="btn btn-primary btn-md text-uppercase" href="https://forms.gle/bzmpZKxQXdXSgtsQ9">Click here to submit any ideas for the tutorials</a>
+          <a class="btn btn-primary btn-md text-uppercase" href="https://forms.gle/bzmpZKxQXdXSgtsQ9">Click here to submit tutorial topics that you would like us to upload</a>
         <!-- </div> -->
       </div>
     </div>
