--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
             </tr>
             <tr>
               <td>02/14/20</td>
-              <td>Open Coding Session</td>
-              <td>5-7PM</td>
+              <td>Happy Valentine's Day <3</td>
+              <td></td>
             </tr>
             <tr>
               <td>02/21/20</td>
