--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
             </tr>
             <tr>
               <td>03/13/20</td>
-              <td>Open Coding Session</td>
-              <td>5-7PM</td>
+              <td>Lindsey Tepfer from TU on Neuroimaging</td>
+              <td>5-6PM</td>
             </tr>
             <tr>
               <td>03/20/20</td>
