--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <a href = cal.html>
             <h2 class="section-heading text-uppercase">Calendar</h2>
           </a>
-          <h3 class="section-subheading text-muted">Schedule of events for the Spring 2020. We will have speakers once every 2-3 weeks (Schedule to be updated). Events are held in SERC 6th floor seminar room. Send us a message on slack when you arrive at SERC if you do not have access to this floor. </h3>
+          <h3 class="section-subheading text-muted">Schedule of events for the Spring 2020. We will have speakers once every 2-3 weeks (Schedule to be updated). Events are held in SERC 6th floor seminar room or room 401 at the Charles Library. Send us a message on slack if you cannot find us. </h3>
         </div>
       </div>
       <div class="row">
@@ -232,7 +232,7 @@
             </tr>
             <tr>
               <td>02/21/20</td>
-              <td>Open Coding Session</td>
+              <td>Open Coding Session @ Charles Library R401</td>
               <td>5-7PM</td>
             </tr>
             <tr>
