--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <a href = cal.html>
             <h2 class="section-heading text-uppercase">Calendar</h2>
           </a>
-          <h3 class="section-subheading text-muted">Schedule of events for the Spring 2020. We will have speakers once every 2-3 weeks (Schedule to be updated). Events are held in SERC 6th floor seminar room or room 401 at the Charles Library. Send us a message on slack if you cannot find us. </h3>
+          <h3 class="section-subheading text-muted">Schedule of events for the Spring 2020. We will have speakers once every 2-3 weeks (Schedule to be updated). Events are held in SERC 6th floor seminar room or in room 401 at the Charles Library. Send us a message on slack if you cannot find us. </h3>
         </div>
       </div>
       <div class="row">
