--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
             </tr>
             <tr>
               <td>02/28/20</td>
-              <td>Open Coding Session</td>
-              <td>5-7PM</td>
+              <td>Graduate Programs Recruitment Week/No Session</td>
+              <td></td>
             </tr>
             <tr>
               <td>03/06/20</td>
