--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </tr>
             <tr>
               <td>02/28/20</td>
-              <td>Graduate Programs Recruitment Week/No Session</td>
+              <td>Graduate Recruitment Week / No Session</td>
               <td></td>
             </tr>
             <tr>
