--- a/index.html
+++ b/index.html
@@ -211,74 +211,9 @@
               <th>Time</th>
             </tr>
             <tr>
-              <td>01/24/20</td>
+              <td>TBD</td>
               <td>Welcome! Open Coding Session</td> 
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>01/31/20</td>
-              <td>Open Coding Session</td> 
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>02/07/20</td>
-              <td>Open Coding Session</td>
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>02/14/20</td>
-              <td>Happy Valentine's Day <3</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>02/21/20</td>
-              <td>Open Coding Session @ Charles Library R401</td>
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>02/28/20</td>
-              <td>Graduate Recruitment Week / No Session</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>03/06/20</td>
-              <td>Happy Spring Break!</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>03/13/20</td>
-              <td>Lindsey Tepfer from TU on Neuroimaging</td>
-              <td>5-6PM</td>
-            </tr>
-            <tr>
-              <td>03/20/20</td>
-              <td>Open Coding Session</td>
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>03/27/20</td>
-              <td>Open Coding Session</td>
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>04/03/20</td>
-              <td>Open Coding Session</td>
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>04/10/20</td>
-              <td>Open Coding Session</td>
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>04/17/20</td>
-              <td>Open Coding Session</td>
-              <td>5-7PM</td>
-            </tr>
-            <tr>
-              <td>04/24/20</td>
-              <td>Last Open Coding Session of the Semester</td>
-              <td>5-7PM</td>
+              <td>TBD</td>
             </tr>
             </table>
         <!-- </div>   -->
@@ -317,7 +252,10 @@
           </table>
           <p>You can request access to our tutorials by contacting studio admins.</p>
           <a class="btn btn-primary btn-md text-uppercase" href="https://forms.gle/bzmpZKxQXdXSgtsQ9">Click here to submit tutorial topics that you would like us to create in the future</a>
-        <!-- </div> -->
+          
+          <a class="btn btn-primary btn-md text-uppercase" href="https://forms.gle/bzmpZKxQXdXSgtsQ9">Click here for the survey for meeting times for Spring 2021</a>
+          
+          <!-- </div> -->
       </div>
     </div>
   </section>
