make alumni page and update for summer 22

--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@
             </span>
           </a>
           <h4 class="service-heading">Training</h4>
-          <p class="text-muted">Guided hands-on bioinformatics training at every level of expertise in an open studio format. Learn bioinformatics coding and tools by doing it yourself. We’ll meet you where you’re at and get you started in no time!
-            </p>
+          <p class="text-muted">Guided hands-on bioinformatics training at every level of expertise in an open studio format. Learn bioinformatics coding and tools by doing it yourself. We’ll meet you where you’re at and get you started in no time!</p>
+          <a class="btn btn-primary btn-md text-uppercase" href="https://drive.google.com/drive/u/1/folders/0AB9vccD6QEfPUk9PVA">Request access to our Shared Google Drive</a>
+          <p></p>
         </div>
         <div class="col-md-6">
           <span class="fa-stack fa-4x">
@@ -199,7 +200,7 @@
           <a href = cal.html>
             <h2 class="section-heading text-uppercase">Calendar</h2>
           </a>
-          <h3 class="section-subheading text-muted">Schedule of events for the Spring 2020. We will have speakers once every 2-3 weeks (Schedule to be updated). Events are held in SERC 6th floor seminar room or in room 401 at the Charles Library. Send us a message on slack if you cannot find us. </h3>
+          <h3 class="section-subheading text-muted">Schedule of events for the Fall 2022 semester TBD. </h3>
         </div>
       </div>
       <div class="row">
@@ -250,10 +251,9 @@
               <td>Introduction to Libraries</td>
             </tr>
           </table>
-          <p>You can request access to our tutorials by contacting studio admins.</p>
-          <a class="btn btn-primary btn-md text-uppercase" href="https://forms.gle/bzmpZKxQXdXSgtsQ9">Click here to submit tutorial topics that you would like us to create in the future</a>
+          <div class="row justify-content-center"><p>You can request access to our tutorials by contacting studio admins or accessing the shared google drive.</p></div>
+          <div class="row justify-content-center"><a class="btn btn-primary btn-md text-uppercase" href="https://forms.gle/bzmpZKxQXdXSgtsQ9">Click here to submit tutorial topics that you would like us to create in the future</a></div>
           
-          <a class="btn btn-primary btn-md text-uppercase" href="https://forms.gle/bzmpZKxQXdXSgtsQ9">Click here for the survey for meeting times for Spring 2021</a>
           
           <!-- </div> -->
       </div>
@@ -267,7 +267,6 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Officers</h2>
           <h3 class="section-subheading text-muted"></h3>
-          <p>We are looking for an Event Manager and a Community Service Chair. Let us know if you are interested.</p>
         </div>
       </div>
       <div class="row">
@@ -275,7 +274,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/jz.jpeg" alt="">
             <h4>Jordan Zehr</h4>
-            <p class="text-muted">Project Manager</p>
+            <p class="text-muted">Project Lead</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/jzehr">
@@ -294,7 +293,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/ap.jpg" alt="">
             <h4>Alyssa Pivirotto</h4>
-            <p class="text-muted">Training Manager</p>
+            <p class="text-muted">Training Coordinator</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/ampivirotto">
@@ -313,7 +312,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/al.jpg" alt="">
             <h4>Alexander Lucaci</h4>
-            <p class="text-muted">Business Affairs Manager</p>
+            <p class="text-muted">Business Affairs</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/aglucaci">
@@ -329,124 +328,7 @@
           </div>
         </div>
       </div>
-      <div class = "row">
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/wk.png" alt="">
-            <h4>Westin Kosater</h4>
-            <p class="text-muted">Social Media Manager</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="https://github.com/wes-kosater">
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/westin-kosater-290600104/">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/ak.jpg" alt="">
-            <h4>Adam Karami</h4>
-            <p class="text-muted">Outreach Manager</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/adam-karami-69167195/">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/hk.png" alt="">
-            <h4>Hannah Kim</h4>
-            <p class="text-muted">Webmaster</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="https://github.com/hannahkimincompbio/">
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/hannahkimincompbio/">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class = "row">
-<!--         <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/nm.JPG" alt="">
-            <h4>Noreen McBrearty</h4>
-            <p class="text-muted">Event Manager</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/noreen-mcbrearty/">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div> -->
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/gn.jpeg" alt="">
-            <h4>Gavin Newcomer</h4>
-            <p class="text-muted">University Relations Manager</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="https://github.com/gavinnewcomer/">
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/gavinnewcomer/">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/qn.jpeg" alt="">
-            <h4>Quentin Novinger</h4>
-            <p class="text-muted">Coding Interview Advisor</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="https://github.com/regnivon/">
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/quentin-novinger-0bb1b0185/">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+      <div class="row justify-content-center"><a class="btn btn-primary btn-lg text-uppercase" href="alumni.html">Alumni</a></div>
       <div class="row">
         <div class="col-lg-12 text-center">
           <p></p>
@@ -583,6 +465,7 @@
           </ul>
         </div>
         <div class="col-md-4">
+          <span class="copyright">Logo designed by D. Pivirotto </span>
         </div>
       </div>
     </div>
