--- a/blogposts/blog.html
+++ b/blogposts/blog.html
@@ -11,24 +11,24 @@
   <title>Bioinformatics Studio - Temple University</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="C:/Users/ampiv/Documents/GitHub/tubioinfostudio.github.io/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="C:/Users/ampiv/Documents/GitHub/tubioinfostudio.github.io/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="C:/Users/ampiv/Documents/GitHub/tubioinfostudio.github.io/css/agency.min.css" rel="stylesheet">
+  <link href="css/agency.min.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <img class="navbar-brand js-scroll-trigger" href="C:/Users/ampiv/Documents/GitHub/tubioinfostudio.github.io/index.html" src = "C:/Users/ampiv/Documents/GitHub/tubioinfostudio.github.io/img/logo_web.png" alt = "">
+            <img class="navbar-brand js-scroll-trigger" href="index.html" src = "img/logo_web.png" alt = "">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
@@ -36,19 +36,19 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ml-auto">
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="C:/Users/ampiv/Documents/GitHub/tubioinfostudio.github.io/index.html">About</a>
+                <a class="nav-link js-scroll-trigger" href="index.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="C:/Users/ampiv/Documents/GitHub/tubioinfostudio.github.io/cal.html">Calendar</a>
+                <a class="nav-link js-scroll-trigger" href="cal.html">Calendar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="C:/Users/ampiv/Documents/GitHub/tubioinfostudio.github.io/index.html">Team</a>
+                <a class="nav-link js-scroll-trigger" href="index.html">Team</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="blog.html">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="C:/Users/ampiv/Documents/GitHub/tubioinfostudio.github.io/index.html">Contact</a>
+                <a class="nav-link js-scroll-trigger" href="index.html">Contact</a>
               </li>
             </ul>
           </div>
