--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <a href = cal.html>
             <h2 class="section-heading text-uppercase">Calendar</h2>
           </a>
-          <h3 class="section-subheading text-muted">Schedule of events for the Fall 2022 semester TBD. </h3>
+          <h3 class="section-subheading text-muted"> Fall 2022:  Meeting Thursdays in SERC 604 @ 5pm </h3>
         </div>
       </div>
       <div class="row">
@@ -212,9 +212,9 @@
               <th>Time</th>
             </tr>
             <tr>
-              <td>TBD</td>
-              <td>Welcome! Open Coding Session</td> 
-              <td>TBD</td>
+              <td>Thursday, Sept. 8th</td>
+              <td>Welcome! in SERC 604 </td> 
+              <td>5:30pm</td>
             </tr>
             </table>
         <!-- </div>   -->
