--- a/cal.html
+++ b/cal.html
@@ -28,30 +28,33 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-          <img class="navbar-brand js-scroll-trigger" href="#page-top" src = "img/logo_web.png" alt = "">
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Temple Bioinformatics Studio</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ml-auto">
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="index.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="cal.html">Calendar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="index.html">Team</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="blog.html">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="index.html">Contact</a>
-              </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="index.html#about">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="index.html#Testimonials">Testimonials</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="index.html#Calendar">Calendar</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="index.html#team">Team</a>
+            </li>
+            <!-- <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#">Blog</a>
+            </li> -->
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="index.html#contact">Contact</a>
+            </li>
             </ul>
-          </div>
+        </div>
         </div>
     </nav>
     <header class = 'masthead'>
@@ -75,7 +78,7 @@
     <section>
         <div class = 'col-md-3'></div>
         <div>
-            <iframe src="https://calendar.google.com/calendar/embed?src=temple.edu_p75l89hlfahjka9kem1lbtju2s%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?src=tubioinfostudio%40gmail.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>  
     </section>
 
