update calendar fall 2022

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <a href = cal.html>
             <h2 class="section-heading text-uppercase">Calendar</h2>
           </a>
-          <h3 class="section-subheading text-muted"> Fall 2022:  Meeting Thursdays in SERC 604 @ 5pm </h3>
+          <h3 class="section-subheading text-muted"> Fall 2022:  Meeting Thursdays in SERC 604 @ 4pm </h3>
         </div>
       </div>
       <div class="row">
@@ -214,7 +214,62 @@
             <tr>
               <td>Thursday, Sept. 8th</td>
               <td>Welcome! in SERC 604 </td> 
-              <td>5:30pm</td>
+              <td>5pm</td>
+            </tr>
+            <tr>
+              <td>Thursday, Sept. 15th</td>
+              <td> Open Coding </td> 
+              <td>4pm</td>
+            </tr>
+            <tr>
+              <td>Thursday, Sept. 29th</td>
+              <td> Open Coding </td> 
+              <td>4pm</td>
+            </tr>
+            <tr>
+              <td>Thursday, Oct. 6th</td>
+              <td> Open Coding </td> 
+              <td>4pm</td>
+            </tr>
+            <tr>
+              <td>Thursday, Oct. 13th</td>
+              <td> Open Coding </td> 
+              <td>4pm</td>
+            </tr>
+            <tr>
+              <td>Thursday, Oct. 20th</td>
+              <td> Open Coding </td> 
+              <td>4pm</td>
+            </tr>
+            <tr>
+              <td>Thursday, Oct. 27th</td>
+              <td> Open Coding </td> 
+              <td>4pm</td>
+            </tr>
+            <tr>
+              <td>Thursday, Nov. 3rd</td>
+              <td> Open Coding </td> 
+              <td>4pm</td>
+            </tr>
+            <tr>
+              <td>Thursday, Nov. 10th</td>
+              <td> Open Coding </td> 
+              <td>4pm</td>
+            </tr>
+            <tr>
+              <td>Thursday, Nov. 17th</td>
+              <td> Open Coding </td> 
+              <td>4pm</td>
+            </tr>
+            <tr>
+              <td>Thursday, Dec. 1st</td>
+              <td> Open Coding </td> 
+              <td>4pm</td>
+            </tr>
+            <tr>
+              <td>Thursday, Dec. 8th</td>
+              <td> Open Coding </td> 
+              <td>4pm</td>
             </tr>
             </table>
         <!-- </div>   -->
@@ -224,7 +279,7 @@
               <th>Available Tutorials</th>
             </tr>
             <tr>
-              <td>Studio Bootstrap</td>
+              <td>Intro to Anaconda</td>
             </tr>
             <tr>
               <td>Intro to Python: Variable Types</td>
@@ -233,22 +288,28 @@
               <td>Intro to Python: Loops & Conditional Statements</td>
             </tr>
             <tr>
+              <td>Input/Output</td>
+            </tr>
+            <tr>
               <td>PANDAS Introduction</td>
             </tr>
             <tr>
               <td>Graphing: Matplotlib and Seaborn</td>
             </tr>
             <tr>
-              <td>Intro to Python: Variable Types</td>
-            </tr>
-            <tr>
-              <td>Input/Output</td>
-            </tr>
-            <tr>
               <td>Introduction to Functions</td>
             </tr>
             <tr>
               <td>Introduction to Libraries</td>
+            </tr>
+            <tr>
+              <td>Linux/Unix</td>
+            </tr>
+            <tr>
+              <td>Github</td>
+            </tr>
+            <tr>
+              <td>De Novo Assembly Analysis</td>
             </tr>
           </table>
           <div class="row justify-content-center"><p>You can request access to our tutorials by contacting studio admins or accessing the shared google drive.</p></div>
