update alumni page

--- a/alumni.html
+++ b/alumni.html
@@ -79,10 +79,15 @@
     <div class = "row">
         <div class="col-sm-4">
         <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/wk.png" alt="">
-            <h4>Westin Kosater</h4>
-            <p class="text-muted"></p>
+            <img class="mx-auto rounded-circle" src="img/team/ivyk.jpg" alt="">
+            <h4>Ivy Kosater</h4>
+            <p class="text-muted">Bioinformatics Programmer at Columbia University Medical Center</p>
             <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/ivykos">
+                <i class="fab fa-github"></i>
+                </a>
+            </li>
             </ul>
         </div>
         </div>
@@ -90,7 +95,7 @@
         <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/ak.jpg" alt="">
             <h4>Adam Karami</h4>
-            <p class="text-muted">Bioinformatian in the Whelan Lab (Temple University)</p>
+            <p class="text-muted">Head of Bioinformatics at Fels Cancer Institute</p>
             <ul class="list-inline social-buttons">
             <li class="list-inline-item">
                 <a href="https://github.com/alkarami">
