--- a/index.html
+++ b/index.html
@@ -222,6 +222,11 @@
               <td>4pm</td>
             </tr>
             <tr>
+              <td>Thursday, Sept. 22nd</td>
+              <td> Open Coding </td> 
+              <td>4pm</td>
+            </tr>
+            <tr>
               <td>Thursday, Sept. 29th</td>
               <td> Open Coding </td> 
               <td>4pm</td>
