--- a/index.html
+++ b/index.html
@@ -228,17 +228,17 @@
             </tr>
             <tr>
               <td>Thursday, Sept. 29th</td>
-              <td> Open Coding </td> 
+              <td> Dr. Craig Stanley, VP of Data Strategy and Technical Operation, IND 5pm </td> 
               <td>4pm</td>
             </tr>
             <tr>
               <td>Thursday, Oct. 6th</td>
-              <td> Open Coding </td> 
+              <td> Fox Chase Cancer Center Zoom Presentation  </td> 
               <td>4pm</td>
             </tr>
             <tr>
               <td>Thursday, Oct. 13th</td>
-              <td> Open Coding </td> 
+              <td> Open Coding & Open Samsung Demonstration </td> 
               <td>4pm</td>
             </tr>
             <tr>
@@ -338,9 +338,100 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/td.jpg" alt="">
+            <h4>Toshan Doodnauth</h4>
+            <p class="text-muted">President/Project Lead</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/tuk76325">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/toshan-doodnauth-250b03224/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/hs.jpeg" alt="">
+            <h4>Harris Syed</h4>
+            <p class="text-muted">Vice President</p>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/nd.png" alt="">
+            <h4>Nathan Duda</h4>
+            <p class="text-muted">University Relations</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/NathanDuda">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/aa.jpg" alt="">
+            <h4>Aurelio Aquila</h4>
+            <p class="text-muted">Business Affairs</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/tul10088">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/aurelio-aquila-207211249">
+                  <i class="fab fa-linkedin-in"> </i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/jtn.jpg" alt="">
+            <h4>Jon Tanner Nelson</h4>
+            <p class="text-muted">Training Coordinator</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/J-T-Nelson">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/jon-tanner-nelson-118709126">
+                  <i class="fab fa-linkedin-in"> </i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- Team: Grads -->
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <p></p>
+          <h2 class="section-heading text-uppercase">Graduate Student Advisory Board</h2>
+          <h3 class="section-subheading text-muted"></h3>
+          <p> </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/jz.jpeg" alt="">
             <h4>Jordan Zehr</h4>
-            <p class="text-muted">Project Lead</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/jzehr">
@@ -359,7 +450,6 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/ap.jpg" alt="">
             <h4>Alyssa Pivirotto</h4>
-            <p class="text-muted">Training Coordinator</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/ampivirotto">
@@ -378,7 +468,6 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/al.jpg" alt="">
             <h4>Alexander Lucaci</h4>
-            <p class="text-muted">Business Affairs</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/aglucaci">
@@ -394,7 +483,49 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/as.jpg" alt="">
+            <h4>Avery Selberg</h4>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/agselberg">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/avery-selberg-63804415a">
+                  <i class="fab fa-linkedin-in"> </i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/hv.jpg" alt="">
+            <h4>Hannah Verdonk</h4>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/hverdonk?tab=repositories">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/hannahverdonk/">
+                  <i class="fab fa-linkedin-in"> </i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- Team: Alumni -->
       <div class="row justify-content-center"><a class="btn btn-primary btn-lg text-uppercase" href="alumni.html">Alumni</a></div>
+
+      <!-- Team: Faculty -->
       <div class="row">
         <div class="col-lg-12 text-center">
           <p></p>
@@ -408,11 +539,11 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/rk.jpg" alt="">
             <h4>Rob Kulathinal</h4>
-            <p class="text-muted">robkulathinal AT temple.edu</p>
+            <p class="text-muted">robkulathinal@temple.edu</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://www.cst.temple.edu/~robie/bioinform/index.html">
-                  <i class="fab fa-hubspot"></i>
+                  <i class="fab fa-university"></i>
                 </a>
               </li>
               <li class="list-inline-item">
@@ -427,11 +558,11 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/vc.jpg" alt="">
             <h4>Vincenzo Carnevale</h4>
-            <p class="text-muted">vincenzo.carnevale AT temple.edu</p>
+            <p class="text-muted">vincenzo.carnevale@temple.edu</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://vincenzocarnevale.wordpress.com/">
-                  <i class="fab fa-hubspot"></i>
+                  <i class="fab fa-university"></i>
                 </a>
               </li>
               <li class="list-inline-item">
