--- a/index.html
+++ b/index.html
@@ -416,6 +416,20 @@
             </ul>
           </div>
         </div>
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/phy.jpg" alt="">
+            <h4>Po'Hsin Yu</h4>
+            <p class="text-muted">Event Manager</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="www.linkedin.com/in/po-hsin-yu">
+                  <i class="fab fa-linkedin-in"> </i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
 
       <!-- Team: Grads -->
