--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             <p class="text-muted">Event Manager</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="www.linkedin.com/in/po-hsin-yu">
+                <a href="https://www.linkedin.com/in/po-hsin-yu">
                   <i class="fab fa-linkedin-in"> </i>
                 </a>
               </li>
