--- a/index.html
+++ b/index.html
@@ -253,17 +253,17 @@
             </tr>
             <tr>
               <td>Thursday, Nov. 3rd</td>
-              <td> Open Coding </td> 
+              <td> Open Coding & FCCC Project Discussion </td> 
               <td>4pm</td>
             </tr>
             <tr>
               <td>Thursday, Nov. 10th</td>
-              <td> Open Coding </td> 
+              <td> HPC Resources Seminar by Jason Lamanna & Open Coding </td> 
               <td>4pm</td>
             </tr>
             <tr>
               <td>Thursday, Nov. 17th</td>
-              <td> Open Coding </td> 
+              <td> RNA-seq Galaxy Pipeline Seminar by Stephen Shank @ FCCC & Open Coding </td> 
               <td>4pm</td>
             </tr>
             <tr>
