--- a/index.html
+++ b/index.html
@@ -339,16 +339,16 @@
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/td.jpg" alt="">
-            <h4>Toshan Doodnauth</h4>
-            <p class="text-muted">President/Project Lead</p>
+            <h4>Hannah Verdonk</h4>
+            <p class="text-muted">President</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="https://github.com/tuk76325">
+                <a href="https://github.com/hverdonk">
                   <i class="fab fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/toshan-doodnauth-250b03224/">
+                <a href="https://www.linkedin.com/in/hannahverdonk/">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
@@ -357,14 +357,26 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/hs.jpeg" alt="">
-            <h4>Harris Syed</h4>
-            <p class="text-muted">Vice President</p>
+            <img class="mx-auto rounded-circle" src="img/team/IMG_4499.jpeg" alt="">
+            <h4>Joseph Campagna</h4>
+            <p class="text-muted">Vice President (Focus: Struct. Bioinfo.)</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/quaterniomics">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/joseph-anthony-campagna-%E4%B9%94%E5%AE%89-a82020107/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/nd.png" alt="">
+            <img class="mx-auto rounded-circle" src="###" alt="">
             <h4>Nathan Duda</h4>
             <p class="text-muted">University Relations</p>
             <ul class="list-inline social-buttons">
@@ -517,23 +529,8 @@
           </div>
         </div>
         <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/hv.jpg" alt="">
-            <h4>Hannah Verdonk</h4>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="https://github.com/hverdonk?tab=repositories">
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/hannahverdonk/">
-                  <i class="fab fa-linkedin-in"> </i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
+          
+
       </div>
 
       <!-- Team: Alumni -->
