--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/td.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/hv.jpg" alt="">
             <h4>Hannah Verdonk</h4>
             <p class="text-muted">President</p>
             <ul class="list-inline social-buttons">
