--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/IMG_4499.jpeg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/jafc.jpeg" alt="">
             <h4>Joseph Campagna</h4>
             <p class="text-muted">Vice President (Focus: Struct. Bioinfo.)</p>
             <ul class="list-inline social-buttons">
