--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="###" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/nd.png" alt="">
             <h4>Nathan Duda</h4>
             <p class="text-muted">University Relations</p>
             <ul class="list-inline social-buttons">
@@ -392,7 +392,7 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/nd.png" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/aa.jpeg" alt="">
             <h4>Aurelio Aquila</h4>
             <p class="text-muted">Business Affairs</p>
             <ul class="list-inline social-buttons">
