--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/aa.jpeg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/aa.jpg" alt="">
             <h4>Aurelio Aquila</h4>
             <p class="text-muted">Business Affairs</p>
             <ul class="list-inline social-buttons">
