--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/jafc.jpeg" alt="">
             <h4>Joseph Campagna</h4>
-            <p class="text-muted">Vice President (Focus: Struct. Bioinfo.)</p>
+            <p class="text-muted">Vice President ( josephrdcabio@gmail.com )</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/quaterniomics">
