--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/jafc.jpeg" alt="">
             <h4>Joseph Campagna</h4>
-            <p class="text-muted">Vice President ( josephrdcabio@gmail.com )</p>
+            <p class="text-muted">Vice President & X/Twitter Social Media Coordinator ( josephrdcabio@gmail.com )</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/quaterniomics">
@@ -538,7 +538,7 @@
  -->
       <!-- Team: Faculty -->
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-6 text-center">
           <p></p>
           <h2 class="section-heading text-uppercase">Faculty Advisors</h2>
           <h3 class="section-subheading text-muted"></h3>
