--- a/index.html
+++ b/index.html
@@ -534,8 +534,8 @@
       </div>
 
       <!-- Team: Alumni -->
-<!--       <div class="row justify-content-center"><a class="btn btn-primary btn-lg text-uppercase" href="alumni.html">Alumni</a></div>
- -->
+      <div class="row justify-content-center"><a class="btn btn-primary btn-lg text-uppercase" href="alumni.html">Alumni</a></div>
+ 
       <!-- Team: Faculty -->
       <div class="row">
         <div class="col-lg-12 text-center">
