--- a/index.html
+++ b/index.html
@@ -534,11 +534,11 @@
       </div>
 
       <!-- Team: Alumni -->
-      <div class="row justify-content-center"><a class="btn btn-primary btn-lg text-uppercase" href="alumni.html">Alumni</a></div>
- 
+<!--       <div class="row justify-content-center"><a class="btn btn-primary btn-lg text-uppercase" href="alumni.html">Alumni</a></div> -->
+     
       <!-- Team: Faculty -->
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-12 text-center" style="margin-top: 20px;">
           <p></p>
           <h2 class="section-heading text-uppercase">Faculty Advisors</h2>
           <h3 class="section-subheading text-muted"></h3>
